# spdx-checker

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  builder.py  pyproject.toml  setup.py  spdx_checker.pyi  targets.json  test.py
.github/workflows/: ci.yml  macos_build.yml  publish.yml  update_licenses_bot.yml
.zig-cache/o/006cb7d848bf494dd9806f03ce5724f0/: cimport.h.d
.zig-cache/o/26c10a40ad3ecc1fc0028d2ebf9f6208/: cimport.h.d
.zig-cache/o/2b3622e0c398d89e2f7546a3e254c435/: cimport.h.d
.zig-cache/o/32df83e4e6bf6cf44c5f8fb0d4c55529/: cimport.h.d
.zig-cache/o/3ee3935bfee866ac0efdbb8440d60959/: cimport.zig
.zig-cache/o/8d878ea587a6072fc14ecc351dba599f/: cimport.zig
.zig-cache/o/9df085b17df43658ade84a9aaf8406a5/: cimport.h  cimport.h.d
.zig-cache/o/a012e30a59e9e865d7cabbc05d5789e1/: cimport.zig
.zig-cache/o/a60713b384f424b3278beefbfd3a5e6d/: cimport.h.d
.zig-cache/o/b0bb6697b791001ca583383aa127a623/: cimport.h.d
.zig-cache/o/b5edc1ba7bbc5c0be83596dd16a231fc/: cimport.zig
.zig-cache/o/d9cb03a3854fa7a66b82078b8e5428dd/: cimport.zig
.zig-cache/o/db46cb537197ab4ccf1b93894db0e309/: cimport.zig
automation/: license_scraper.py
extension/: errors.zig  licenses.zig  main.zig  parse.zig  python.zig  utils.zig  version.zig
extension/utils/: filter.zig  fix.zig  format.zig  glob.zig  output.zig
sdpx-checker/: __init__.pyi
spdx_checker/: __init__.py  __init__.pyi  spdx_checker.py  spdx_checker.pyi
src/: licenses.zig  spdx_checker.zig  utils.zig
test/: test_fib.py
tests/: test_spdx_checker.py
tests/first/: example.py
(+3 files in other folders)
