[project]
name = "spdx_checker"
version = "0.1.19"

description = "Fast SPDX License Checker for Source Code"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Tobias Stach"}]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[build-system]
requires = ["setuptools>=68"]


