[project]
name = "spdx_checker"
version = "0.1.20"

description = "Fast SPDX License Checker for Source Code"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Tobias Stach"}]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.11.12",
]

[build-system]
requires = ["setuptools>=68"]


